--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-<h2>Sunny</h2>
+<h2>Demo JavaScript in Body</h2>
+
+<p id="demo">A Paragraph</p>
+
+<button type="button" onclick="myFunction()">Try it</button>
+
+<script src="scripts.js"></script>
 
 </body>
 </html>
