--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <h2>Demo JavaScript in Body</h2>
 
+<h1 id="id01">Old Heading</h1>
+
 <p id="demo">A Paragraph</p>
 
 <button type="button" onclick="myFunction()">Try it</button>
